modify build.sh and nginx.conf

--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -5,6 +5,7 @@ worker_processes  1;
 #error_log  logs/error.log;
 #error_log  logs/error.log  notice;
 #error_log  logs/error.log  info;
+error_log  logs/error.log  debug;
 
 #pid        logs/nginx.pid;
 
@@ -33,7 +34,7 @@ http {
     #gzip  on;
 
     server {
-        listen       80;
+        listen       8501;
         server_name  localhost;
 
         #charset koi8-r;
@@ -41,6 +42,7 @@ http {
         #access_log  logs/host.access.log  main;
 
         location / {
+            mp4;
             root   html;
             index  index.html index.htm;
         }
